objects/Manufacturer_at_Dealership__c.object
<CustomObject>
    <description>Manufacturers identified at an account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manufacturers at Dealership</relationshipLabel>
        <relationshipName>R00N40000001ldb7EAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CompositeExtID__c</fullName>
        <description>Account ID + (Oracle) Manf. Code + Segment Code</description>
        <externalId>true</externalId>
        <label>CompositeExtID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manufacturer_Dealer_Code__c</fullName>
        <label>Manufacturer Dealer Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Parent__c</fullName>
        <formula>Manufacturer__r.Manufacturers_Parent_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>Manufacturer__c</referenceTo>
        <relationshipLabel>Manufacturers at Dealership (Manufacturers)</relationshipLabel>
        <relationshipName>R00N40000001lfhBEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OEM_Corporation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporation</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Accounts with Site Type of &apos;OEM&apos; can be selected.</errorMessage>
            <filterItems>
                <field>Account.Site_Type__r.Non_Sales_Type__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Site_Type__r.Name</field>
                <operation>equals</operation>
                <value>OEM</value>
            </filterItems>
            <infoMessage>Only Accounts with Site Type of &apos;OEM&apos; can be selected.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manufacturers at Dealership (Corporation)</relationshipLabel>
        <relationshipName>Manufacturers_at_Dealership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OEM_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Accounts with Site Type of &apos;OEM&apos; can be selected.</errorMessage>
            <filterItems>
                <field>Account.Site_Type__r.Non_Sales_Type__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Site_Type__r.Name</field>
                <operation>equals</operation>
                <value>OEM</value>
            </filterItems>
            <infoMessage>Only Accounts with Site Type of &apos;OEM&apos; can be selected.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manufacturers at Dealership (District)</relationshipLabel>
        <relationshipName>Manufacturers_at_Dealership2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OEM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Accounts with Site Type of &apos;OEM&apos; can be selected.</errorMessage>
            <filterItems>
                <field>Account.Site_Type__r.Name</field>
                <operation>equals</operation>
                <value>OEM</value>
            </filterItems>
            <filterItems>
                <field>Account.Site_Type__r.Non_Sales_Type__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only Accounts with Site Type of &apos;OEM&apos; can be selected.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manufacturers at Dealership (Region)</relationshipLabel>
        <relationshipName>Manufacturers_at_Dealership1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PVID_Code__c</fullName>
        <label>PVID Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_A__c</fullName>
        <label>P&amp;A</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLX_CreateDate__c</fullName>
        <label>SLX CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX_ID__c</fullName>
        <label>SLX ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Manufacturer at Dealership</label>
    <nameField>
        <displayFormat>ID - {00000}</displayFormat>
        <label>Mfg at Dealer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturers at Dealership</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>